fix: checkbox alignment

--- a/src/components/CustomCheckbox/custom_checkbox.module.scss
+++ b/src/components/CustomCheckbox/custom_checkbox.module.scss
@@ -9,7 +9,7 @@
   z-index: 0;
   margin-bottom: auto;
   @media screen and (min-width: 992px) {
-    align-items: center;
+    align-items: baseline;
   }
   label {
     cursor: pointer;
